// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuantitySelector component should render QuantitySelector with prop disableDelete 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with prop id 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with prop onUpdateQuantity 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with prop quantity 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with prop showSelectors 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with prop style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      Object {},
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;

exports[`QuantitySelector component should render QuantitySelector with required props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 44,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      color="secondary"
      lineHeight={false}
      weight="bold"
    >
      1
    </Text>
    <Text
      color="secondary"
      lineHeight={false}
      size="xsmall"
      weight="bold"
    >
      QTY
    </Text>
  </View>
</View>
`;
